--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main class="main-content">
       <section class="hero-image">
         <div class="hero-text">
-          <h1 class="event-heading">Ett event <span>med LiveFest</span></h1>
+          <h1 class="event-heading">Ett event <span>med LiveFest!</span></h1>
           <p class="info-text">
             Drömmer du om att få uppleva den ultimata festivalupplevelsen?
             <span>
@@ -72,20 +72,20 @@
 
       <section id="grid-container">
         <div class="grid-image"></div>
-          <div class="heading-size">
-            <div class="heading-container">
-              <h2 class="heading-setting">Festival Info &</h2>
-              <h2 class="heading-setting">Biljetter</h2>
-            </div>
-            <p class="paragraph-setting">
-              LiveFest är en musikfestival som kommer till Stockholm under
-              sommaren 2023! Där du kan se dina favoritartister live! Det
-              kommer vara en fullspäckad line-up med olika artister, band och
-              komiker. Välj mellan festivalpaketet, konsertbiljetter eller endast
-              campingbiljett. Så får du tillgång till olika aktiviteter som
-              LiveFest har att erbjuda under helgen!
-            </p>
+        <div class="heading-size">
+          <div class="heading-container">
+            <h2 class="heading-setting">Festival Info &</h2>
+            <h2 class="heading-setting">Biljetter</h2>
           </div>
+          <p class="paragraph-setting">
+            LiveFest är en musikfestival som kommer till Stockholm under
+            sommaren 2023! Där du kan se dina favoritartister live! Det kommer
+            vara en fullspäckad line-up med olika artister, band och komiker.
+            Välj mellan festivalpaketet, konsertbiljetter eller endast
+            campingbiljett. Så får du tillgång till olika aktiviteter som
+            LiveFest har att erbjuda under helgen!
+          </p>
+        </div>
       </section>
 
       <!-- VALIDATE GRID, TICKETS AND INFO! -->
@@ -97,8 +97,8 @@
           <h2>Vi skyddar din säkerhet</h2>
           <p>
             Att gå på festival ska vara en rolig upplevelse, för alla. Det är
-            därför vi jobbar hårt för att hålla säkerhetsnivån allra högst.
-            Med hjälp utav LiveFest bemannade säkerhets-team hjälper vi våra
+            därför vi jobbar hårt för att hålla säkerhetsnivån allra högst. Med
+            hjälp utav LiveFest bemannade säkerhets-team hjälper vi våra
             besökare att känna sig trygga och säkra under hela festival helgen.
             Alla incidenter rapporteras och polisanmäls.
           </p>
@@ -122,9 +122,7 @@
           <section class="newletter-image"></section>
           <section class="Subscribe-newsletter-text">
             <div class="subscribe-title">
-              <h2 class="Subscribe">
-                Prenumerera På LiveFests Nyhetsbrev!
-              </h2>
+              <h2 class="Subscribe">Prenumerera På LiveFests Nyhetsbrev!</h2>
             </div>
             <p class="newsletter-text">
               Registrera dig och för att få exklusiva erbjudanden, info och
@@ -150,23 +148,23 @@
     <!-- Newsletter-form Validated OK-->
 
     <!-- 6. Footer-section -->
-    <footer id="footer-grid-container">  
+    <footer id="footer-grid-container">
       <div id="footer-link1">
-          <a href="#">Hitta hit</a>
-          <a href="#">Tillgänglighet</a>
-          <a href="#">Kontakta Oss</a>
+        <a href="#">Hitta hit</a>
+        <a href="#">Tillgänglighet</a>
+        <a href="#">Kontakta Oss</a>
       </div>
       <div id="footer-link2">
-          <a href="#">FAQ</a>
-          <a href="#">Öppentider</a>
-          <a href="#">Åldersgräns</a>
+        <a href="#">FAQ</a>
+        <a href="#">Öppentider</a>
+        <a href="#">Åldersgräns</a>
       </div>
       <div id="footer-link3">
-          <a href="#">Privacy</a>
-          <a href="#">Partners</a>
-          <a href="#">COVID</a>
+        <a href="#">Privacy</a>
+        <a href="#">Partners</a>
+        <a href="#">COVID</a>
       </div>
-     </footer>  
+    </footer>
     <!-- Footer Validated OK-->
     <!-- Everything is Validated OK -->
   </body>
